isort and tox file

--- a/tox.ini
+++ b/tox.ini
@@ -17,4 +17,5 @@ deps = flake8
 
 [testenv:isort]
 commands = isort --check-only --recursive websocket_redis
+# commands = isort --recursive --diff websocket_redis
 deps = isort
