--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,8 @@
 envlist = py34,py35,coverage,flake8,isort
 
 [testenv]
-commands = python -m unittest
+commands = make test
+deps = nose
 
 [testenv:coverage]
 commands =
